tests/baselines/reference/types.forAwait.es2018.3.errors.txt
error TS2318: Cannot find global type 'AsyncIterableIterator'.
tests/cases/conformance/types/forAwait/types.forAwait.es2018.3.ts(3,27): error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/forAwait/types.forAwait.es2018.3.ts(5,21): error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/forAwait/types.forAwait.es2018.3.ts(10,27): error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
tests/cases/conformance/types/forAwait/types.forAwait.es2018.3.ts(12,21): error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


!!! error TS2318: Cannot find global type 'AsyncIterableIterator'.
==== tests/cases/conformance/types/forAwait/types.forAwait.es2018.3.ts (4 errors) ====
    async function f1() {
        let y: number;
        for await (const x of {}) {
                              ~~
!!! error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
        }
        for await (y of {}) {
                        ~~
!!! error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
        }
    }
    async function* f2() {
        let y: number;
        for await (const x of {}) {
                              ~~
!!! error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
        }
        for await (y of {}) {
                        ~~
!!! error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
        }
    }
    